k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cafe-app-service
spec:
  selector:
    app: cafe-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30007 # You can specify a custom NodePort here (range: 30000-32767)
  type: NodePort
