k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  rules:
  - host: cafe.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cafe-service
            port:
              number: 80
