k8s-manifests/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cafe-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cafe
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - cafe-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: cafe.default.svc.cluster.local
        port:
          number: 80
